[gd_scene load_steps=4 format=3 uid="uid://b4mq375ctqnkh"]

[ext_resource type="Texture2D" uid="uid://0p5t2g65y7b3" path="res://shared/mouseover/checkerboard.png" id="1_e1dni"]
[ext_resource type="Script" path="res://shared/mouseover/mouseover_root.gd" id="1_eurvf"]
[ext_resource type="Script" path="res://shared/mouseover/mouseover.gd" id="2_heplw"]

[node name="Mouseover" type="Node2D"]
script = ExtResource("1_eurvf")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("2_heplw")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(1, 1.05637)
scale = Vector2(1.0125, 1.01274)
polygon = PackedVector2Array(-9, 48, -50, 50, -50, -52, 50, -49, 49, 51)

[node name="Image" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_e1dni")

[node name="HoverLabel" type="RichTextLabel" parent="."]
visible = false
clip_contents = false
offset_left = 77.0
offset_right = 287.0
offset_bottom = 25.0
text = "Mouse over label"
fit_content = true
scroll_active = false

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="Area2D" method="_on_mouse_exited"]
[connection signal="mouse_exited" from="HoverLabel" to="HoverLabel" method="_on_mouse_exited"]
